--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 /* Styling for the main body elements */
+/*
 body {
     background-color: #f2f2f2;
     font-family: "Tahoma", sans-serif;
@@ -9,7 +10,14 @@ body {
     display: flex;
     flex-direction: column;
 }
-
+*/
+body {
+    background: linear-gradient(to bottom, #77e3eb, #0eb1da);
+    font-family: Arial, sans-serif;
+    text-align: center;
+    margin: 128px;
+    padding: 100px;
+}
 
 /* Styling for main header 1 */
 h1{
